# CodeWhale

./: .commit-msg-3263.txt  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_GAP_ANALYSIS.md  COMMIT_MSG.txt  CONTRIBUTING.md  Cargo.toml  Dockerfile  InstallationLog.txt  MEMORY_DESIGN.md  PR_BODY_BILINGUAL.md  PR_DESCRIPTION.md  README.ja-JP.md  README.md  README.vi.md  README.zh-CN.md  SECURITY.md  STATUS.md  TAKEOVER_PROMPT.md  _read_cli.js  _test_exe.js  analyze_claude_paths.js  build_check.bat  check_ds.js  check_git.js  check_pkg_paths.js  check_ports.js  check_py.py  check_scripts.js  config.example.toml  config.toml  deepseek.ps1  deny.toml  dev-container.ps1  find_clash.js  find_clash2.js  (+50 more)
.cargo/: config.toml
.codewhale/: constitution.json
.github/: AUTHOR_MAP  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  agent-task.yml  config.yml
.github/workflows/: approve-contributor.yml  auto-tag.yml  ci.yml  dco.yml  gui-build.yml  nightly.yml  release.yml  web.yml
.pi/: settings.json
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
Deepseek-GUI/scripts/: build-release.ps1  build-release.sh
SPEC_files/: 16_GENMICON_PROJECT_INTENTION_SPEC.md  17_PI_BASED_REFACTOR_PLAN_SPEC.md  README.md  SPEC_TEMPLATE.md  WORKFLOW.md
SPEC_files/game_driver/: README.md
crates/codewhale-extension/: Cargo.toml
crates/codewhale-extension/src/: extension.rs  lib.rs  prelude.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs  schema.rs  store.rs
crates/tn-extension/: Cargo.toml
crates/tn-extension/src/: lib.rs
crates/triadmind/: Cargo.toml
crates/triadmind/src/: config.rs  lib.rs  protocol.rs  rules.rs  sync.rs  verify.rs
crates/triadmind/src/abstraction_memory/: mod.rs
crates/triadmind/src/dream/: mod.rs
crates/triadmind/src/generator/: mod.rs
crates/triadmind/src/govern/: mod.rs
crates/triadmind/src/heal/: mod.rs
crates/triadmind/src/navigate/: mod.rs
crates/triadmind/src/parser/: mod.rs  parser_core.rs  tree_sitter_engine.rs
crates/triadmind/src/runtime/: mod.rs
crates/triadmind/src/visualizer/: mod.rs
crates/triadmind/src/workflow/: mod.rs
crates/whaleflow/: Cargo.toml
crates/whaleflow-js/: Cargo.toml
crates/whaleflow-js/src/: bridge.rs  lib.rs  vm.rs
crates/whaleflow/src/: config.rs  lib.rs  result.rs  scheduler.rs  spawner.rs  tool.rs  worktree.rs
crates/whaleflow/tests/: integration_test.rs
docs/: ADDING_CONTEXT.md  AGENT_READY_ISSUES.md  ARCHITECTURE.md  ATLASCLOUD_PROVIDER_REVIEW.md  CATALOG_REFRESH.md  CNB_MIRROR.md  COMPETITIVE_ANALYSIS.md  CONFIGURATION.md  CONSTITUTION.md  CONTRIBUTORS.md  COST.md  CREDIT.md  CUSTOM_THEME.md  DEBUG_CLIPBOARD_PASTE.md  DIRECTORY_STRUCTURE.md  EXTENDING.md  FAQ.md  FLEET.md  GAME_TUI_FRAMEWORK_SPEC.md  GUIDE.md  INSTALL.md  ISSUE_4407_ANALYSIS.md  ISSUE_TRIAGE.md  KEYBINDINGS.md  MCP.md  MEMORY.md  MODES.md  MULTI_TAB_AND_I18N.md  PROVIDERS.md  PRO_PLAN_BENCH_RESULTS.md  PRO_PLAN_EVAL.md  PRO_PLAN_MODE.md  README.md  REBRAND.md  RELEASE_CHECKLIST.md  RELEASE_RUNBOOK.md  RESTORE.md  REVIEW_PIPELINE.md  RLM_BRANCHING_ROADMAP.md  RUNTIME_API.md  (+12 more)
my-docs/: 01_架构概览.md  02_Crate详解.md  03_快速上手.md  README.md
onboarding/: Skill_Flow_Design (old).md  Surf_Audit_2026-07-24.md  Surf_PR4762_Response_Report.md  Surf_Skill_Flow_Design.md
scripts/: check-coauthor-trailers.py  check-provider-registry.py  mobile-smoke.sh  runtime-mobile-smoke.py  test_check_coauthor_trailers.py  v0867-setup-qa.sh
web/: README.md  package-lock.json  package.json  vitest.config.ts
web-chat/: index.html
website/: index.html
workflows/: stopship.workflow.js
(+857 files in other folders)
