[package]
name = "codewhale-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hippocampal memory system — structured entity graph with cross-session recall"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
