[package]
name = "codewhale-whaleflow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WhaleFlow: declarative multi-agent workflow orchestration for CodeWhale"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
